dctrl2xml (0.10) unstable; urgency=low

  * 

 -- Frank S. Thomas <fst@debian.org>  Wed, 02 Jan 2008 10:30:36 +0100

dctrl2xml (0.9) unstable; urgency=low

  * dctrl2xml:
    - Do not fail on truncated tags where the "::" separator is missing.
    - Improved contacts parsing to handle strings such as "john@example.org
      (John R. Doe)".
    - Instead of replacing only "3" with "_3" in tags, prefix all tags that
      begin with a decimal digit with an underscore.
    - Added the "generator" attribute, whose value is "dctrl2xml/$VERSION", to
      the topmost element of dctrl2xml's XML output.
    - Parse also the file list of the Conffiles field.
    - Print error messages to standard error if the format of field data of
      several fields could not be recognized.
    - Do not fail if 'UTC' is used as time zone designator (as it is done in
      Release files), although RFC 2822 does not seem to permit this.
    - Do not discard the last (or the only) control entry if data input does
      not end with an empty line.
  * debian/rules: Added test target that stress tests dctrl2xml with the dpkg
    available file and the output of "apt-cache dumpavail".
  * debian/control: Moved python-support from Build-Depends to
    Build-Depends-Indep, because it is not required for the clean target.

 -- Frank S. Thomas <fst@debian.org>  Wed, 02 Jan 2008 10:11:11 +0100

dctrl2xml (0.8) unstable; urgency=low

  * dctrl2xml:
    - Print dctrl2xml's version number if the --version option is given.
    - Convert RFC 2822 dates in Date fields to a ISO 8601 representation and
      save them in <date_iso8601> elements.
    - Enabled Debtags parsing again, it was disabled in 0.7 due to errors
      when parsing "compressed tags". This has been corrected.
  * doc/dctrl2xml.xml: Added reference to deb-control(5) to the SEE ALSO
    section.
  * stylesheets/pkglist{,compact}.xsl: Reformatted and added example usage of
    dctrl2xml and the stylesheets with a Packages file.
