@@ -1,8 +1,9 @@
 dctrl2xml (0.10) unstable; urgency=low
 
-  * 
+  * doc/dctrl2xml.xml: Fixed Lintian's "I: hyphen-used-as-minus-sign" by
+    enclosing the command examples with the <userinput> element.
 
- -- Frank S. Thomas <fst@debian.org>  Wed, 02 Jan 2008 10:30:36 +0100
+ -- Frank S. Thomas <fst@debian.org>  Thu, 03 Jan 2008 11:50:55 +0100
 
 dctrl2xml (0.9) unstable; urgency=low
 
